{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 30,
  "lineage": "81ba5d5f-4850-a7fb-689e-e24e9ab5a083",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_istory_nginx_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b09b6acd8d62254",
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:instance/i-0bf84b82fc89eea47",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2CodeDeployProfile",
            "id": "i-0bf84b82fc89eea47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca0f9787832764b7",
            "private_dns": "ip-10-0-1-151.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-54-180-246-94.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.246.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003cc29baf58bb653",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082f725e39fbe6129",
            "tags": {
              "Environment": "Development",
              "Name": "istory nginx-server"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "istory nginx-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b39445fa2de71b3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_codedeploy_role",
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.istory_nginx_sg",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc",
            "tls_private_key.ec2_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dangtong-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:internet-gateway/igw-047bf6b8f591259d6",
            "id": "igw-047bf6b8f591259d6",
            "owner_id": "529088272993",
            "tags": {
              "Name": "dangtong-igw"
            },
            "tags_all": {
              "Name": "dangtong-igw"
            },
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dangtong-vpc-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:route-table/rtb-0cb130915b7f9b9d3",
            "id": "rtb-0cb130915b7f9b9d3",
            "owner_id": "529088272993",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047bf6b8f591259d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dangtong-vpc-public-rt"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dangtong-vpc-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0597e2aa5e722d9cc",
            "route_table_id": "rtb-0cb130915b7f9b9d3",
            "subnet_id": "subnet-082f725e39fbe6129"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ad13dd3264e7ff6",
            "route_table_id": "rtb-0cb130915b7f9b9d3",
            "subnet_id": "subnet-0ac8c68c18624abe2"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077da9b302b5a80f3",
            "route_table_id": "rtb-0cb130915b7f9b9d3",
            "subnet_id": "subnet-036aba0836ffd5dcf"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdc5633084d12690",
            "route_table_id": "rtb-0cb130915b7f9b9d3",
            "subnet_id": "subnet-0a0e14cf5c0e1c49b"
          },
          "dependencies": [
            "aws_internet_gateway.dangtong-igw",
            "aws_route_table.dangtong-vpc-public-rt",
            "aws_subnet.dangtong-vpc-public-subnet",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "istory_nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:security-group/sg-07b39445fa2de71b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b39445fa2de71b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "istory nginx sg20250322055034326300000004",
            "name_prefix": "istory nginx sg",
            "owner_id": "529088272993",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "istory_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:security-group/sg-0e27c10e459748067",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e27c10e459748067",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b39445fa2de71b3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "istory rds sg20250322055036799100000006",
            "name_prefix": "istory rds sg",
            "owner_id": "529088272993",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "istory-rds-sg"
            },
            "tags_all": {
              "Name": "istory-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.istory_nginx_sg",
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dangtong-vpc-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:subnet/subnet-082f725e39fbe6129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082f725e39fbe6129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "529088272993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-a"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-a"
            },
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:subnet/subnet-0ac8c68c18624abe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac8c68c18624abe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "529088272993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-b"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-b"
            },
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:subnet/subnet-036aba0836ffd5dcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036aba0836ffd5dcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "529088272993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-c"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-c"
            },
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        },
        {
          "index_key": "d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:subnet/subnet-0a0e14cf5c0e1c49b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e14cf5c0e1c49b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "529088272993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dangtong-vpc-public-subnet-d"
            },
            "tags_all": {
              "Name": "dangtong-vpc-public-subnet-d"
            },
            "vpc_id": "vpc-0b1d0eb83dda9f11b"
          },
          "dependencies": [
            "aws_vpc.dangtong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dangtong-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:529088272993:vpc/vpc-0b1d0eb83dda9f11b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0367b193b297f174e",
            "default_route_table_id": "rtb-0125f0836e3c92d99",
            "default_security_group_id": "sg-04f1b6a98669f241f",
            "dhcp_options_id": "dopt-0765fa313ff5bf0ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1d0eb83dda9f11b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0125f0836e3c92d99",
            "owner_id": "529088272993",
            "tags": {
              "Name": "dangtong-vpc"
            },
            "tags_all": {
              "Name": "dangtong-vpc"
            }
          }
        }
      ]
    }
  ]
}